--- a/src/app/components/list/list.component.css
+++ b/src/app/components/list/list.component.css
@@ -87,6 +87,11 @@ button:disabled{
 .member-buttons > *:hover{
   background-color: rgba(0, 0, 0, 0.11);
 }
+.member-buttons > button:focus-visible{
+  background-color: rgba(0, 0, 0, 0.282);
+  outline: none;
+
+}
 .task-list{
   height: 100%;
   min-height: 250px;
@@ -150,6 +155,12 @@ button:disabled{
 .close:hover{
   background-color: rgba(0, 0, 0, 0.068);
 }
+
+.close:focus-visible{
+  background-color: rgba(0, 0, 0, 0.282);
+  outline: none;
+}
+
 .done-maks{
   left:-15px;
   top:-11px;
@@ -161,6 +172,7 @@ button:disabled{
   align-items: center;
   justify-content: center;
 }
+
 .done-text{
 text-transform: capitalize;
 letter-spacing: 25px;
@@ -171,18 +183,17 @@ font-size: clamp(2rem, 1rem + 10% ,3rem);
 -ms-user-select: none; 
 user-select: none; 
 }
+
 .edit-mini-flex{
   position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  
-
 }
+
 .edit-mini-flex > p{
   position: relative;
-
 }
 
 .edit-mini-flex > input{
@@ -193,9 +204,7 @@ user-select: none;
   border: none;
   font-family: 'Comfortaa', cursive;
 }
-input:focus{
-  outline: none;
-}
+
 select{
   padding-left: 10px;
   position: relative;
@@ -204,9 +213,8 @@ select{
   border: none;
   font-family: 'Comfortaa', cursive;
 }
-select:focus{
-  outline: none;
-}
+
+
 option{
   font-size:1rem;
   background: rgba(173, 110, 110, 0);
@@ -255,4 +263,8 @@ select option {
 
 .del-mem:hover{
   background-color: rgba(0, 0, 0, 0.11);
+}
+.del-mem:focus-visible{
+  background-color: rgba(0, 0, 0, 0.282);
+  outline: none;
 }
